增加技能配置

--- a/.gitignore
+++ b/.gitignore
@@ -1962,4 +1962,4 @@ MdServer/game-server/node_modules/zeparser/test-parser.html
 MdServer/game-server/node_modules/zeparser/test-tokenizer.html
 MdServer/game-server/node_modules/zeparser/tests.js
 MdServer/game-server/node_modules/zeparser/unicodecategories.js
-MdServer/.idea/workspace.xml
+MdServer/.idea/
