--- a/MdServer/game-server/package.json
+++ b/MdServer/game-server/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "private": false,
   "dependencies": {
+    "generic-pool": "*",
     "mysql": "^2.13.0",
+    "async": ">=0.0.1",
     "pomelo": "1.2.3",
     "pomelo-logger": ">=0.0.3",
     "pomelo-sync-plugin": ">=0.0.1"
