--- a/loginWebServer/package.json
+++ b/loginWebServer/package.json
@@ -6,7 +6,8 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "ejs": "*",
     "express": "3.2.2",
-    "ejs": "*"
+    "generic-pool": "^3.1.7"
   }
 }
