--- a/MdServer/web-server/package.json
+++ b/MdServer/web-server/package.json
@@ -4,7 +4,7 @@
   "private": false,
   "dependencies": {
     "express": "3.4.8",
-    "generic-pool": "^3.1.7",
+    "generic-pool": "2.4.1",
     "ejs": "*",
     "mysql": "2.10.2",
     "log4js": "0.6.33",
