--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,20 @@
 loginWebServer/node_modules
+fishing-server/game-server/node_modules
 MdServer/game-server/node_modules
 MdServer/web-server/node_modules
 *.log
 MdServer/web-server/node_modules
 MdServer/.idea
 loginWebServer/.idea
+fishing-server/.idea
 loginWebServer/logs
+fishing-server/game-server/logs
 MdClient/Library
 MdClient/obj
 MdClient/Temp
+fishingclient/Library
+fishingclient/obj
+fishingclient/Temp
 *.csproj
 *.sln
 *.userprefs
